crates/ink/tests/ui/contract/fail/message-selector-invalid-type-02.stderr
error: expected 4-digit hexcode for `selector` argument, e.g. #[ink(selector = 0xC0FEBABE]
  --> tests/ui/contract/fail/message-selector-invalid-type-02.rs:12:24
   |
12 |         #[ink(message, selector = true)]
   |                        ^^^^^^^^
